--- a/style/style.css
+++ b/style/style.css
@@ -77,6 +77,13 @@ li{
     margin: 0 auto;
     text-align: center;
 }
+.banner-title{
+    background-color:white;
+    color:#30b868;
+    border-radius: 15px;
+    display: inline-block;
+    padding:5px 10px;
+}
 .banner-text h1{
     font-size : 58px;
     color: white;
